# My_Code-Python

JupyterNotebook/: 描述符-惰性计算.ipynb
JupyterNotebook/encapsulation with calss/: class_inherts.ipynb  soc_mvp.ipynb
LearningProject/Others/: 99乘法表.py  Heart.py  translate.py  删除文件.py  斐波那契数列.py  星星三角形.py  石头剪刀布_面向对象.py
LearningProject/async/: async_cnu_new.py  b站视频_async.py  pic2py.py
NoneBot2Project/go-cqhttp/: config.yml  device.json  session.token
NoneBot2Project/test_bot/: .env.dev  .env.prod  README.md  bot.py  pyproject.toml
NoneBot2Project/test_bot/data/: data.sqlite3  lolicon.db
NoneBot2Project/test_bot/data/nonebot_plugin_cnu/data/: 2023-01-18_每日精选.json
NoneBot2Project/test_bot/data/nonebot_plugin_leetcode/html/: bulb-switcher-ii.html  height-checker.html  maximum-swap.html  minimum-cost-to-set-cooking-time.html  reveal-cards-in-increasing-order.html  special-array-with-x-elements-greater-than-or-equal-x.html  trim-a-binary-search-tree.html
NoneBot2Project/test_bot/data/nonebot_plugin_menstrual/: 梁锦滢.json
NoneBot2Project/test_bot/test_bot/plugins/: help.py
NoneBot2Project/test_bot/test_bot/plugins/nonebot_plugin_cnu/: __init__.py  config.py  handpick.py  utils.py
NoneBot2Project/test_bot/test_bot/plugins/nonebot_plugin_group_maneger/: __init__.py
NoneBot2Project/test_bot/test_bot/plugins/nonebot_plugin_menstrual/: __init__.py  menstrual.py  menstrual_assistant.py  utils.py
PyQtProject/cnu_new/: __init__.py  app.py
ScrapyProject/: 随机UA.txt
ScrapyProject/cnu_Project/: scrapy.cfg
ScrapyProject/jdlingyu_Project/: scrapy.cfg
(+48 files in other folders)
